--- a/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="nav flex justify-content align-items p-2">
     <div class="left">
-        <img src="https://via.placeholder.com/150x40" alt="Placeholder Image" class="logo">
+        <img src="https://via.placeholder.com/150x40" alt="Placeholder Image" class="logo" routerLink="/">
     </div>
 
     <div class="right">
