--- a/FrontEnd/DishDash/src/styles.css
+++ b/FrontEnd/DishDash/src/styles.css
@@ -23,6 +23,9 @@
 .flex-col {
     flex-direction: column;
 }
+.pointer {
+    cursor: pointer;
+}
 html, body { 
     height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
