--- a/FrontEnd/DishDash/src/app/Components/footer/footer.component.html
+++ b/FrontEnd/DishDash/src/app/Components/footer/footer.component.html
@@ -8,7 +8,7 @@
           <div class="col-12 col-md-4 col-lg-3 col-xl-2">
             <div class="widget">
               <a href="#!">
-                <img src="./assets/img/bsb-logo.svg" alt="BootstrapBrain Logo" width="175" height="57">
+                <img src="https://via.placeholder.com/150x40" alt=" Logo" width="175" height="57" routerLink="/">
               </a>
             </div>
           </div>
