--- a/FrontEnd/DishDash/src/app/Components/navigation/navigation.component.html
+++ b/FrontEnd/DishDash/src/app/Components/navigation/navigation.component.html
@@ -3,7 +3,6 @@
     <p>You Location is <span>{{city}}</span></p>   
 </div>
 <app-navbar></app-navbar>
-<app-search></app-search>
-<app-restaurant></app-restaurant>
+<app-loadingbar></app-loadingbar>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
-<app-login></app-login>
