--- a/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.html
+++ b/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.html
@@ -1,1 +1,41 @@
-<p>restaurantview works!</p>
+<div class="restaurantbox">
+    <div class="infobox bg-light p-3 m-3">
+        <div class="photos flex">
+            <img alt="Restaurant" *ngFor="let x of oneRestaurant.resImages" [src]="x">
+            
+        </div>
+        <div class="descriptionbox flex justify-content-between">
+            <div class="left">
+                <h2>{{oneRestaurant.resName}}</h2>
+                <p>{{oneRestaurant.resCuisines}}</p>
+                <span>{{oneRestaurant.resAddress}}</span>
+            </div>
+            <div class="rigt flex flex">
+                <span>{{oneRestaurant.resRating}}</span>
+                <mat-icon fontIcon="favorite"></mat-icon>
+            </div>
+        </div>
+    </div>
+
+    <div class="menubox bg-light flex p-3 m-3">
+        <div class="menuleft bg-danger-subtle p-3">
+
+            <p *ngFor="let category of oneRestaurant.resCategories">{{category}}</p>
+        </div>
+
+        <div class="menuright">
+            <div class="menuitem bg-body-secondary flex p-2 m-2 mb-3 gap-3" *ngFor="let menu of oneRestaurant.resMenu">
+                <div class="part1">
+                    <img [src]="menu.dishImage" alt="">
+                </div>
+                <div class="part2">
+                    <h5 class="m-0">{{menu.dishName}}</h5>
+                    <p class="m-0">{{menu.dishRating}} people rated</p>
+                    <p class="m-0">Rs {{menu.dishPrice}}/-</p>
+                    <span class="m-0">{{menu.dishDescription}}</span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
