--- a/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
@@ -1,10 +1,28 @@
-<div class="nav flex justify-content align-items p-2">
+<div class="nav flex justify-content align-items ">
     <div class="left">
         <img src="https://via.placeholder.com/150x40" alt="Placeholder Image" class="logo" routerLink="/">
     </div>
 
     <div class="right">
-        <div class="login flex gap-2">
+
+        <div class="logout flex justify-center align-items bg-white border-black gap-1" *ngIf="isLoggedIn">
+            <div class="profile">
+                <img src="https://via.placeholder.com/40x40" alt="">
+            </div>
+            <div class="name">Avish</div>
+            <div class="dropdown">
+                <button class="dropdown-toggle border-0 drop" type="button" data-bs-toggle="dropdown" title="dropbutton" data-bs-offset="0,10">
+                </button>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                  <li><a class="dropdown-item" routerLink="customer/favourites">Favourites</a></li>
+                  <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+                </ul>
+              </div>
+
+        </div>
+
+        <div class="login flex gap-2" *ngIf="!isLoggedIn">
             <mat-icon  aria-hidden="false" aria-label="Example home icon" fontIcon="login"></mat-icon> 
             <span class="fw-bold">Log In</span> 
         </div>
