Popup for login added

--- a/FrontEnd/DishDash/src/app/Components/login/login.component.html
+++ b/FrontEnd/DishDash/src/app/Components/login/login.component.html
@@ -40,6 +40,7 @@
         Sign in
       </button>
     </div>
+    <button (click)="closeDialoge()">Close</button>
     <!-- Register buttons -->
     <div class="text-center">
       <p>Not a member? <a href="#!">Register</a></p>
