--- a/FrontEnd/DishDash/src/app/Components/restaurantcard/restaurantcard.component.html
+++ b/FrontEnd/DishDash/src/app/Components/restaurantcard/restaurantcard.component.html
@@ -1,5 +1,5 @@
 
-<div class="card pointer" routerLink="/restaurants/{{onerestaurant.resId}}">
+<div class="card pointer" routerLink="/{{onerestaurant.resCity.toLowerCase()}}/restaurants/{{onerestaurant.resId}}">
 <div class="image" >
         <img [src]="onerestaurant.resImages[0]" alt="">
     
