Loading Bar Changes

--- a/FrontEnd/DishDash/src/app/Components/loadingbar/loadingbar.component.css
+++ b/FrontEnd/DishDash/src/app/Components/loadingbar/loadingbar.component.css
@@ -1,8 +1,14 @@
-mat-progress-bar {
+/* mat-progress-bar {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
+  } */
+
+  .loading {
+    /* color: red !important; */
+    /* background-color: red !important; */
+    /* border-color: red !important; */
   }
   
