--- a/FrontEnd/DishDash/src/app/Components/loadingbar/loadingbar.component.html
+++ b/FrontEnd/DishDash/src/app/Components/loadingbar/loadingbar.component.html
@@ -1,1 +1,4 @@
-<mat-progress-bar *ngIf="isLoading" mode="determinate" [value]="progress"></mat-progress-bar>
+<!-- <mat-progress-bar  *ngIf="isLoading" mode="determinate" [value]="progress"></mat-progress-bar> -->
+
+<mat-progress-bar class="loading"  mode="determinate" [value]="progress" *ngIf="isLoading"></mat-progress-bar>
+<div class="class flex justify-content-center" *ngIf="isLoading">Loading Bar</div>
