Loading Bar Completed + Fetching Favourites Done

--- a/FrontEnd/DishDash/src/app/Components/login/login.component.css
+++ b/FrontEnd/DishDash/src/app/Components/login/login.component.css
@@ -5,3 +5,11 @@
 .button button {
     min-width: 100%;
 }
+
+.close-button {
+margin: 10px 15px auto auto;
+}
+
+.header {
+    justify-content: end;
+}
