--- a/FrontEnd/DishDash/src/app/Components/cutomerfavourite/cutomerfavourite.component.html
+++ b/FrontEnd/DishDash/src/app/Components/cutomerfavourite/cutomerfavourite.component.html
@@ -1,4 +1,19 @@
-<div class="favourites p-5">
-    <h2>Your Favourites</h2>
+<div class="resBox p-5" *ngIf="restaurants.length !==0">
+    <div class="headline">
+        <h3>Your Favourites</h3>
+    </div>
 
+    <div class="restaurants flex gap-4 p-3 justify-content" >
+
+       
+        <div class="card" *ngFor="let restaurant of restaurants">
+            <app-restaurantcard [onerestaurant] = "restaurant"></app-restaurantcard>
+        </div>
+    </div>
+
+</div>
+
+<div class="text-center p-5" *ngIf="restaurants.length ==0">
+<h3 class="text-info-emphasis">No Favorite Restaurant</h3>
+<p routerLink="/" class="pointer bg">Go to Home Page</p>
 </div>
