--- a/FrontEnd/DishDash/src/app/Components/footer/footer.component.html
+++ b/FrontEnd/DishDash/src/app/Components/footer/footer.component.html
@@ -84,7 +84,7 @@
               &copy; 2024. All Rights Reserved.
             </div>
             <div class="credits text-secondary text-center text-md-start mt-2 fs-8">
-              Built by <a href="https://bootstrapbrain.com/" class="link-secondary text-decoration-none">BootstrapBrain</a> with <span class="text-primary">&#9829;</span>
+              Built by <a href="https://bootstrapbrain.com/" class="link-secondary text-decoration-none">DishDash</a> with <span class="text-primary">&#9829;</span>
             </div>
           </div>
   
