--- a/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
+++ b/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
@@ -1,1 +1,3 @@
-<h1>Your Profile</h1>
+<app-navbar></app-navbar>
+<app-edit-profile></app-edit-profile>
+<app-cutomerfavourite></app-cutomerfavourite>
