--- a/FrontEnd/DishDash/src/app/Components/login/login.component.html
+++ b/FrontEnd/DishDash/src/app/Components/login/login.component.html
@@ -53,9 +53,13 @@
 
     </div>
 
+    <div class="spinner flex justify-content-center" *ngIf="isLoadingSpinner">
+      <mat-spinner></mat-spinner>
+    </div>
+
     <!-- Register buttons -->
     <div class="text-center">
-      <p>Not a member? <a routerLink="/register" (click)="closeDialoge()">Register</a></p>
+      <p>Not a member? <a class="pointer" (click)="openRegister()">Register</a></p>
     </div>
   </form>
 </div>
