--- a/FrontEnd/DishDash/src/app/Components/loginalert/loginalert.component.html
+++ b/FrontEnd/DishDash/src/app/Components/loginalert/loginalert.component.html
@@ -1,4 +1,14 @@
-<mat-icon  aria-hidden="false" aria-label="Example home icon" fontIcon="alert"></mat-icon>
-
-<h3>Login Alert</h3>
-<p (click)="openLoginDialog()">Do login First</p>
+<div class=" header flex justify-content-between align-items">
+    <button mat-icon-button class="close-button" (click)="closeDialog()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
+<div>
+<h1 mat-dialog-title>  <mat-icon  aria-hidden="false" aria-label="Example home icon" fontIcon="error"></mat-icon></h1>
+<div mat-dialog-content>
+  <!-- Your content here -->
+   <h4>You need to Login First</h4>
+   <a class="login pointer" (click)="openLoginDialog()">Here you can login
+   </a>
+</div>
+</div>
