--- a/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.css
+++ b/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.css
@@ -20,3 +20,18 @@
     border-radius: 50%;
 }
 
+.mycart {
+    position: absolute;
+    top:100% ;
+    right: 0;
+    width: 30vw;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    z-index: 1000;
+}
+.cart {
+    position: relative;
+}
+
