--- a/FrontEnd/DishDash/src/app/Components/register/register.component.html
+++ b/FrontEnd/DishDash/src/app/Components/register/register.component.html
@@ -1,3 +1,9 @@
+<div class=" header flex justify-content-between align-items">
+    <button mat-icon-button class="close-button" (click)="closeDialoge()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
+
 <!-- <p>register works!</p> -->
 <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="form-div">
