--- a/FrontEnd/DishDash/src/app/Components/restaurant/restaurant.component.html
+++ b/FrontEnd/DishDash/src/app/Components/restaurant/restaurant.component.html
@@ -17,7 +17,10 @@
     <h1>No Restaurant In Your City</h1></div> -->
 </div>
 
-<div class="text-center p-5" *ngIf="restaurants.length ==0">
+<div class="text-center p-5" *ngIf="noRestuarant">
 <h3 class="text-info-emphasis">Sorry, No Restaurant In Your City</h3>
 <p>We are working hard to brin dishdash to your city</p>
+</div>
+<div class="spinner flex justify-content-center " *ngIf="spinnerVisible">
+    <mat-spinner ></mat-spinner>
 </div>
