--- a/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.css
+++ b/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.css
@@ -29,10 +29,14 @@
 }
 
 .menuitem {
-    height: 20vh;
+    /* height: 20vh; */
     max-width: 100%;
     overflow: hidden;
 
+}
+
+.countInput {
+    text-align: center;
 }
 
 .menuitem .part1 {
