--- a/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.html
+++ b/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.html
@@ -2,17 +2,18 @@
     <div class="infobox bg-light p-3 m-3">
         <div class="photos flex">
             <img alt="Restaurant" *ngFor="let x of oneRestaurant.resImages" [src]="x">
-            
+
         </div>
         <div class="descriptionbox flex justify-content-between">
             <div class="left">
-                <h2>{{oneRestaurant.resName}}</h2>
+                <h2 >{{oneRestaurant.resName}}</h2>
                 <p>{{oneRestaurant.resCuisines}}</p>
                 <span>{{oneRestaurant.resAddress}}</span>
             </div>
             <div class="right flex ">
+
                 <span>{{oneRestaurant.resRating}}</span>
-                <mat-icon class="fav" fontIcon="favorite_border" (click)="toogleFav()" ></mat-icon>
+                <mat-icon class="fav" [fontIcon]="isFavorite ? 'favorite':'favorite_border'" (click)="toogleFav()" ></mat-icon>
             </div>
         </div>
     </div>
@@ -20,26 +21,44 @@
     <div class="menubox bg-light flex p-3 m-3">
         <div class="menuleft bg-danger-subtle p-3">
 
-            <p *ngFor="let category of categoryArray">{{category[0]}} ({{category[1]}})</p>
+            <p class="pointer" *ngFor="let category of categoryArray" (click)="scrollToCateogry(category[0])">{{category[0]}} ({{category[1]}})</p>
         </div>
 
         <div class="menuright">
-            <!-- <div class="categories" *ngFor="let category of oneRestaurant.resCategories">
-                <h4>{{category}}</h4>
-            </div> -->
-        
-            <div class="menuitem bg-body-secondary flex p-2 m-2 mb-3 gap-3" *ngFor="let menu of oneRestaurant.resMenu">
-                <div class="part1">
-                    <img [src]="menu.dishImage" alt="">
+            <div class="menuitem bg-body-secondary flex p-2 m-2 mb-3 gap-3" *ngFor="let category of categoryWiseDishesArray">
+                <div class="wholeCategory" id="{{category[0]}}">
+                    <div class="headine">
+                        <h4>{{category[0]}}</h4>
+                    </div>
+
+                    <div class="menuItems">
+                        <div class="oneItem flex p-2 m-2 gap-3 bg-body-tertiary" *ngFor="let item of category[1]">
+
+                            <div class="part1">
+                                <img [src]="item.dishImage" alt="">
+                            </div>
+                            <div class="part2">
+                                <h5 class="m-0">{{item.dishName}}</h5>
+                                <p class="m-0">{{item.dishRating}} people rated</p>
+                                <p class="m-0">Rs {{item.dishPrice}}/-</p>
+                                <span class="m-0">{{item.dishDescription}}</span>
+
+                                <div class="counters flex ">
+                                    <button class="w-25" (click)="decreseCount()">-</button>
+                                    <input title="Count" class="w-25 countInput" type="text" [(ngModel)]="counter">
+                                    <button class="w-25" (click)="increaseCount()">+</button>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
                 </div>
-                <div class="part2">
-                    <h5 class="m-0">{{menu.dishName}}</h5>
-                    <p class="m-0">{{menu.dishRating}} people rated</p>
-                    <p class="m-0">Rs {{menu.dishPrice}}/-</p>
-                    <span class="m-0">{{menu.dishDescription}}</span>
-                </div>
+               
 
             </div>
+
+            
         </div>
     </div>
 </div>
