--- a/FrontEnd/DishDash/src/app/Components/login/login.component.html
+++ b/FrontEnd/DishDash/src/app/Components/login/login.component.html
@@ -8,7 +8,7 @@
 <!-- <div mat-dialog-content> -->
 
 <div class="loginform p-5">
-  <form #loginform = "ngForm" ngNativeValidate (ngSubmit)="loginUser()">
+  <form #loginform = "ngForm" ngNativeValidate (ngSubmit)="loginUser(userlogin)">
 
     <div *ngIf="errorMessage" class="alert alert-danger">{{errorMessage}}</div>
     <!-- Email input -->
