--- a/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.html
+++ b/FrontEnd/DishDash/src/app/Components/restaurantview/restaurantview.component.html
@@ -62,3 +62,12 @@
         </div>
     </div>
 </div>
+
+<div class="spinner flex justify-content-center " *ngIf="spinnerVisible">
+    <mat-spinner ></mat-spinner>
+</div>
+
+<div class="noSuchRestaurant flex justify-content-center align-items p-5 flex-column" *ngIf="noSuchRestaurant">
+    <h2>No Such Restaurant.....</h2>
+    <a routerLink="/">Go To Home Page</a>
+</div>
