Profile Tab Update

--- a/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
@@ -31,11 +31,11 @@
               >Profile</a
             >
           </li>
-          <li>
+          <!-- <li>
             <a class="dropdown-item pointer" routerLink="customer/favourites"
               >Favorites</a
             >
-          </li>
+          </li> -->
           <li>
             <a class="dropdown-item pointer" (click)="logout()">Logout</a>
           </li>
@@ -44,7 +44,7 @@
     </div>
 
     <div class="login flex gap-md-4" *ngIf="!isLoggedIn">
-      <div class="Signup flex gap-2">
+      <!-- <div class="Signup flex gap-2">
         <mat-icon
           aria-hidden="false"
           aria-label="Example home icon"
@@ -55,7 +55,7 @@
           class="fw-bold pointer"
           >Register</span
         >
-      </div>
+      </div> -->
 
       <div class="login flex gap-2">
         <mat-icon
