--- a/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
+++ b/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.html
@@ -27,7 +27,7 @@
         ></button>
         <ul class="dropdown-menu">
           <li>
-            <a class="dropdown-item pointer" routerLink="customer/profile"
+            <a class="dropdown-item pointer" routerLink="customer/profile/favorites"
               >Profile</a
             >
           </li>
