--- a/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
+++ b/FrontEnd/DishDash/src/app/Components/profile/profile.component.html
@@ -1,8 +1,3 @@
-<!-- <div class="welcome p-3 bg-black">
-    <img class="profile rounded-circle" src="https://via.placeholder.com/100x100" alt="">
- <h2 class="mt-1 text-white">Welcome, <span class="fst-italic fw-bold text-danger">{{activeCustomer.customerName}}</span></h2> 
-</div> -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <div class="welcome p-3 bg-black position-relative">
     <img id="profileImage" class="profile rounded-circle" src="https://via.placeholder.com/100x100" alt="Profile Image">
@@ -10,6 +5,8 @@
     <i class="fas fa-camera camera-icon text-white mt-4" (click)="triggerFileInput()"></i>
     <h2 class="mt-1 text-white">Welcome, <span class="fst-italic fw-bold text-danger">{{activeCustomer.customerName}}</span></h2>
 </div>
+
+
 <div class="profilediv flex ">
 
     <div class="left w-30 p-3  pt-4 pb-4 bg-body-secondary">
@@ -24,8 +21,8 @@
         <div class="orderOnline mt-5">
             <h6>ONLINE ORDEREING</h6>
             <div class="item   fs-3 flex flex-column gap-3">
-                <div class="editProfile bg-white p-2 pointer">Order History</div>
-                <div class="favorites bg-white p-2 pointer">My History</div>
+                <div class="editProfile bg-white p-2 pointer" routerLink="order-history">Order History</div>
+                <div class="favorites bg-white p-2 pointer" routerLink="my-addresses">My Addresses</div>
             </div>
         </div>
 
@@ -38,7 +35,7 @@
         
     </div>
 
-    <div class="right w-50">
+    <div class="right w-100">
        <router-outlet></router-outlet>
 
     </div>
