--- a/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.css
+++ b/FrontEnd/DishDash/src/app/Components/navbar/navbar.component.css
@@ -1,7 +1,15 @@
 .nav {
+    display: flex;
+    align-items: center;
     justify-content: space-between;
     height: 10vh;
     padding: 0px 50px;
+    /* position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, box-shadow 0.3s ease; */
 }
 
 .right {
